--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apollo-boost": "^0.4.9",
+    "currency-symbol-map": "^5.0.1",
+    "dompurify": "^2.3.3",
     "graphql": "^14.7.0",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0"
   }
 }
