--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.27.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
